LPD-92617 Add POST /portal-instances/{portalInstanceId}/export endpoint
